# TSPLR

./: .gitignore  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: aifffile.cpp.FB4E849B229671FB.idx  aifffile.h.D932C423DB9033F1.idx  aiffproperties.cpp.02BF0A1E8407293C.idx  aiffproperties.h.A4CC7A6ADC6ED639.idx  apefile.cpp.33883C9DA3F90D97.idx  apefile.h.1C96D302F5BC33A7.idx  apefooter.cpp.0B6B8E83D39EDE50.idx  apefooter.h.CB1AAC8100A05249.idx  apeitem.cpp.596D2583E2E9C18A.idx  apeitem.h.D1CD9FE3B8FD723A.idx  apeproperties.cpp.EA5638C5C5AFFBF4.idx  apeproperties.h.F71B0DBE5A25F617.idx  apetag.cpp.B000588C904540DC.idx  apetag.h.6EA85CDC193E2EFF.idx  asfattribute.cpp.37B60C0AD702718F.idx  asfattribute.h.44E6BC4DAB07785A.idx  asffile.cpp.F00FB368C03968E3.idx  asffile.h.8A6D0D3DE12CA659.idx  asfpicture.cpp.7A7B9858FDC39CC1.idx  asfpicture.h.6E5A2AAD2989093F.idx  asfproperties.cpp.22BEB7A4819D15FD.idx  asfproperties.h.C833313EBC4B8BFE.idx  asftag.cpp.04E40AD00AC5D49D.idx  asftag.h.9859A1DB09103665.idx  asfutils.h.A15AB78A1FABCE09.idx  attachedpictureframe.cpp.581E76065DFA431D.idx  attachedpictureframe.h.852B99C374D5DA01.idx  audioproperties.cpp.D0D454EE7C1D4881.idx  audioproperties.h.C38D4763E7D128DB.idx  chapterframe.cpp.136B786F3544549B.idx  chapterframe.h.1BEE138F33319CF9.idx  commentsframe.cpp.C0E49520C16C6BCE.idx  commentsframe.h.551F3AC7D00F52EC.idx  dsdiffdiintag.cpp.17C658023758E07B.idx  dsdiffdiintag.h.B2A79837176E9DF9.idx  dsdifffile.cpp.D2C2FC7FAA41E9A3.idx  dsdifffile.h.1823633B86A6EF9D.idx  dsdiffproperties.cpp.F340F56727FA4D89.idx  dsdiffproperties.h.BB2181C00BDB0BF0.idx  dsffile.cpp.EF11663117A56AED.idx  (+222 more)
src/: main.cpp
src/window/: window.cpp  window.hpp
